overflow-y fix | big size canvas render

--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -73,7 +73,7 @@
 }
 
 .cover {
-  transform: scale(0.4);
+  transform: scale(0.35);
   width: 1000px;
   height: 335px;
   padding: 50px 150px 50px 150px;
